Tue Nov 21 15:16:34 1995  Fred Fish  <fnf@rtl.cygnus.com>

	* config/m68k/xm-hp300hpux.h: Define MMAP_BASE_ADDRESS and MMAP_INCREMENT.
	Also force HAVE_MMAP to be defined since autoconf is currently broken
	for detecting a working mmap under hpux.
	* config/pa/xm-hppah.h (MMAP_BASE_ADDRESS): Tweak MMAP_BASE_ADDRESS
	to a better value suggested by Jeffrey A Law (law@cygnus.com).

Tue Nov 21 08:48:58 1995  Fred Fish  <fnf@cygnus.com>

	* config/pa/xm-hppah.h: Define MMAP_BASE_ADDRESS and MMAP_INCREMENT.
	Also force HAVE_MMAP to be defined since autoconf is currently broken
	for detecting a working mmap under hpux.
	* objfiles.c (map_to_address): Have gdb print a warning when it
	is compiled with HAVE_MMAP but without both MMAP_BASE_ADDRESS and
 	MMAP_INCREMENT defined (thus making it appear mmap doesn't work).

Mon Nov 20 14:13:53 1995  Stu Grossman  (grossman@cygnus.com)

	* infrun.c (wait_for_inferior):  Add support for dynamic function
	trampolines.  These are pieces of code between the caller and the
	callee that figure out the address of the callee's code at run
	time.  Upon entry, we can't figure out the callee's address, so we
	set a breakpoint within the trampoline where the address will be
	known, and continue the target.  Once we hit the breakpoint, we
	break at the callee's address and proceed as usual.
start-sanitize-gm
	* config/tm-magic.h:  Define DYNAMIC_TRAMPOLINE_NEXTPC.  Turn off
	IN_SOLIB_CALL_TRAMPOLINE and IN_SOLIB_RETURN_TRAMPOLINE.
end-sanitize-gm

Mon Nov 20 11:12:34 1995  Fred Fish  <fnf@cygnus.com>

	* objfiles.c (allocate_objfile): Change warning message about mapped
	symbol tables so that it is obvious that they are not supported on
	this particular machine rather than implying they are not supported
	at all in this version of gdb.

Sun Nov 19 05:20:53 1995  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* irix5-nat.c, osfsolib.c (solib_address):  Return the name of the
	containing solib.