@@ -1,3 +1,8 @@
+Fri Nov 24 16:17:01 1995  Jeffrey A Law  (law@cygnus.com)
+
+	* top.c (recurse_read_control_structure): Don't make cleanups
+	here.  Callers handle that correctly.
+
 Tue Nov 21 15:16:34 1995  Fred Fish  <fnf@rtl.cygnus.com>
 
 	* config/m68k/xm-hp300hpux.h: Define MMAP_BASE_ADDRESS and MMAP_INCREMENT.
